# data-engineering-zoomcamp

week_1_basics_n_setup/2_docker_sql/: .gitignore  docker-compose.yaml  pg-test-connection.ipynb  pyproject.toml  upload-data.ipynb
