[tool.pdm]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "ChihYu Yeh", email = "chihyu.jimmy.yeh@gmail.com"},
]
dependencies = [
    "pandas>=1.5.3",
    "sqlalchemy>=2.0.6",
    "psycopg2-binary>=2.9.5",
    "ipykernel>=6.21.3",
]
requires-python = ">=3.10"
license = {text = "MIT"}
